# rediff

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile
.github/workflows/: ci.yml  release.yml
openspec/changes/add-blame-and-commit-messages/: design.md  proposal.md  tasks.md
openspec/changes/add-blame-and-commit-messages/specs/commit-message/: spec.md
openspec/changes/add-blame-and-commit-messages/specs/commit-navigation/: spec.md
openspec/changes/add-blame-and-commit-messages/specs/file-blame/: spec.md
openspec/changes/add-blame-and-commit-messages/specs/file-peek/: spec.md
openspec/changes/add-blame-and-commit-messages/specs/mode-routing/: spec.md
openspec/changes/add-sidebar-dir-grouping/: design.md  proposal.md  tasks.md
openspec/changes/add-sidebar-dir-grouping/specs/changeset-loading/: spec.md
openspec/changes/add-sidebar-dir-grouping/specs/navigation/: spec.md
openspec/changes/add-sidebar-dir-grouping/specs/sidebar-grouping/: spec.md
openspec/changes/archive/2026-06-21-rsdiff-mvp-viewer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-rsdiff-mvp-viewer/specs/changeset-loading/: spec.md
openspec/changes/archive/2026-06-21-rsdiff-mvp-viewer/specs/layout-modes/: spec.md
openspec/changes/archive/2026-06-21-rsdiff-mvp-viewer/specs/navigation/: spec.md
openspec/changes/archive/2026-06-21-rsdiff-mvp-viewer/specs/review-stream/: spec.md
openspec/changes/archive/2026-06-21-rsdiff-mvp-viewer/specs/syntax-highlighting/: spec.md
openspec/changes/archive/2026-06-22-commit-navigation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-file-peek/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-22-streaming-diff-load/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-24-add-collapsible-directories/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-24-refactor-tui-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-adopt-theme-set-and-picker/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-26-add-pager-mode/: design.md  proposal.md  tasks.md
openspec/specs/changeset-loading/: spec.md
openspec/specs/commit-navigation/: spec.md
openspec/specs/diff-pager/: spec.md
openspec/specs/directory-collapse/: spec.md
openspec/specs/file-peek/: spec.md
openspec/specs/layout-modes/: spec.md
openspec/specs/mode-routing/: spec.md
openspec/specs/navigation/: spec.md
openspec/specs/review-stream/: spec.md
openspec/specs/streaming-diff-load/: spec.md
openspec/specs/syntax-highlighting/: spec.md
openspec/specs/theme-selection/: spec.md
openspec/specs/theming-and-config/: spec.md
openspec/specs/viewed-tracking/: spec.md
src/: cli.rs  config.rs  diff.rs  lang.rs  lib.rs  main.rs  model.rs  pager.rs  render.rs  testutil.rs
src/git/: blame.rs  commits.rs  diff.rs  enumerate.rs  filter.rs  mod.rs  types.rs
src/highlight/: engine.rs  mod.rs
src/pager/: pager_tests.rs
src/tui/: blame.rs  fuzzy.rs  highlight.rs  keymap.rs  loader.rs  mod.rs  peek.rs  review.rs  rows.rs  session.rs  sidebar.rs  stream.rs  testutil.rs  theme.rs  view.rs
src/tui/app/: appcore.rs  mod.rs  nav.rs  overlays.rs  peekview.rs  types.rs
src/tui/app/nav/: nav_tests.rs
src/tui/app/overlays/: overlays_tests.rs
src/tui/runtime/: events.rs  keys.rs  mod.rs  peek_tests.rs  render_tests.rs  view_tests.rs
src/tui/runtime/keys/: keys_tests.rs
src/tui/ui/: frame.rs  mod.rs  overlays.rs  stream.rs
tests/: cli_io.rs  loaders.rs  tui_pty.rs
tests/common/: mod.rs
(+19 files in other folders)
